2015-07-10 Martin Grønholdt

* user_config.h: Version 0.0.3.
* slighttp/http.h: Upped version.
* rest/network.c (create_response): Only create a response if there isn't one.
*				 (rest_network_put_handler): Return size of data sent.
* slighttp/net-names.c (rest_net_names_head_handler): Allocate context struct.


2015-07-09 Martin Grønholdt

* slighttp/http..h (http_response): Removed unused send member.
* rest/network.c: Adjusted for new http_process_response behaviour.
* rest/net-names.c: Added rest_net_names_context.
*				  : Adjusted for new http_process_response behaviour.
*				   (rest_net_names_get_handler): Uses context struct.
*				   (rest_net_names_head_handler): Uses context and only replies with a real answer.
*				   (create_response): Uses context and create a response when done scanning.
*				   (scan_done_cb): Call http response handler when done scanning.
* rest/net-passwd.c: Adjusted for new http_process_response behaviour.
* slighttp/http-response.c (http_process_response): Keep processing if there is no response yet.
*												  : Keep count of recursion level.
* 						   (http_send_status_line): Return size of data sent.
*						   (http_send_header): Return the size of the data sent.
*						   (http_send): Return number of bytes buffered.
* slighttp/http-fs.c (http_fs_head_handler): Return size of data sent.
*					 (http_fs_get_handler): Return size of the data sent.

2015-07-08 Martin Grønholdt

* rest_handlers.h: Fixed call of test function in wrong place.
* user_main.c (status_check): Deallocation of dangling connections.
* rest/net-names.c (scan_done_cb): Only free data on error.
*								 : Better error handling.
* 				   (create_response): Free old data.
*									: Only scan until response is send.
*									: Better error handling.


2015-07-07 Martin Grønholdt

* rest/net-passwd.c (rest_net_passwd_destroy): Resets the esp8266 when called.


2015-07-05 Martin Grønholdt

* fs/connect/js/atmic.min.js: Changes content type to JSON.